# modern_cpp_playground

./: CMakeLists.txt  README.md  conanfile.txt
include/: persistent_list.hpp
src/: persistent_list.cpp
test/: persistent_list_test.cpp
